# star-generator-for-mom

./: Cargo.toml  sample.txt  svg_base.txt
src/: helpers.rs  main.rs
src/drawer/: mod.rs
