[package]
edition = "2021"
name = "englishwizards"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = "0.3.2"
num_cpus = "1.13.1"
resvg = "0.20.0"
threadpool = "1.8.1"
tokio = {version = "1.1.15", features = ["full"]}
tokio-stream = "0.1.8"
